--- a/platform-window.html
+++ b/platform-window.html
@@ -13,6 +13,7 @@
         <script type="module" src="js/title-bar.js"></script>
         <script type="module" src="js/layout-form.js"></script>
         <script type="module" src="js/snapshot-form.js"></script>
+        <script type="module" src="js/renameclick.js"></script>
     </head>
     <body>
         <div id="of-frame-main">
