changed public json

--- a/link.html
+++ b/link.html
@@ -8,6 +8,8 @@
     <script type="module" src="js/renameclick.js"></script>
 </head>
 <body>
-    <a href="https://google.com">Link</a>
+    <a href="https://cnn.com">Link</a>
+    <a href="https://gmail.com">Link 2</a>
+    <a href="https://amazon.com">Link 3</a>
 </body>
 </html>
